# auto_illustrator

./: .gitignore  README.md  pyproject.toml
sources/: Cards.xlsx
src/: auto_illustrator.py
